Commited to new branch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="siteNav">
           <h1>Where do you want to go?</h1>
           <ul>
-            <li><a href="tours.html" title="Our tours">Tours <br /><span class="tagline">follow our bliss</span></a>
+            <li><a href="tours.html" title="Our tours branch sthlm">Tours <br /><span class="tagline">follow our bliss</span></a>
               <ul>
                 <li><a href="tours.html" title="Our tours">All Tours</a></li>
                 <li><a href="tours.html" title="find tours">Tours by Activity</a></li>
@@ -62,7 +62,7 @@
       <div id="contentWrapper">
         <div id="mainContent">
           <div id="mainArticle"> 
-            <h1>Tour Spotlight</h1>
+            <h1>Tour Spotlight sthlm</h1>
             <p class="spotlight">This month's spotlight package is Cycle California. Whether you are looking for some serious downhill thrills to a relaxing ride along the coast, you'll find something to love in Cycle California.<br /> <span class="accent"><a href="tours_cycle.html" title="Cycle California">tour details</a></span></p>
             
             <h1>Explorer's Podcast</h1>
